syntax = "proto3";
package com.example.sum;

message SumRequest {
  int32 num1 = 1;
  int32 num2 = 2;
}

message SumResponse {
  int32 result = 1;
}


service SumService {

  rpc simpleSum(SumRequest) returns (SumResponse);

  rpc streamSum(SumRequest) returns (stream SumResponse);

}